[package]
name = "vulkano"
version = "0.1.0"
authors = ["Brian <bk.wood@voafone.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
vulkano = "0.21.0"
vulkano-shaders = "0.21.0"
vulkano-win = "0.21.0"
winit_input_helper = "0.9.0"
vecmath = "1.0.0"

[dependencies.rand]
version = "*"
features = ["small_rng"]